--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/general/logo.svg"></a>
-            <div>
+            <a class="navbar-brand" href="#"><img src="images/general/logo.svg"> </a>
+            <!--  <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-            </div>
+            </div> -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
@@ -53,7 +53,7 @@
     <section class="UR-hero">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg col-md-7 col-12">
+                <div class="col-lg col-12">
                     <div class="inner-box">
                         <h1 class="text-purple">The easiest way to win faster with <span class="text-brown">proof</span>!</h1>
                         <p class="text-purple mb-5">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-auto col-md-5 col-12">
+                <div class="col-lg-auto col-12">
                     <img src="images/home/hero-img.png" class="img-fluid">
                 </div>
             </div>
@@ -77,15 +77,15 @@
         <div class="container">
             <h3 class="text-purple mb-5">Trusted by the leading companies of the future</h3>
             <div class="row align-items-center">
-                <div class="col-4">
-                    <img src="images/home/logo1.svg">
+                <div class="col-sm-4 col-12 mb-sm-0 mb-5">
+                    <img src="images/home/logo1.svg" class="img-fluid">
                     <span class="mt-2">*Investor partner and clinet</span>
                 </div>
-                <div class="col-4">
-                    <img src="images/home/newlogo.svg">
+                <div class="col-sm-4 col-12 mb-sm-0 mb-5">
+                    <img src="images/home/newlogo.svg" class="img-fluid">
                 </div>
-                <div class="col-4">
-                    <img src="images/home/logo3.svg">
+                <div class="col-sm-4 col-12">
+                    <img src="images/home/logo3.svg" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -93,7 +93,8 @@
 
     <!-- start section why us -->
     <section class="UR-features">
-        <img src="images/home/promotion.png" class="promotion-img">
+        <img src="images/home/img1.png" class="user-img">
+        <div class="promotion-img"></div>
         <div class="absolute-block"></div>
 
         <div class="container">
@@ -305,36 +306,36 @@
     <!-- start footer-->
     <footer>
         <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-lg-auto col-12">
-                    <a href="#"><img src="images/general/logo.svg" class="footer-logo"></a>
+            <div class="row justify-content-between align-items-center">
+                <div class=" col-lg-auto col-12 ">
+                    <a href="# "><img src="images/general/logo.svg " class="footer-logo "></a>
                 </div>
-                <div class="col-auto">
+                <div class="col-md-auto col-12 text-center mb-md-0 mb-4">
                     <ul>
-                        <li><a href="#">Story</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Clients</a></li>
-                        <li><a href="#">FAQs</a></li>
+                        <li><a href="# ">Story</a></li>
+                        <li><a href="# ">Team</a></li>
+                        <li><a href="# ">Clients</a></li>
+                        <li><a href="# ">FAQs</a></li>
                     </ul>
                 </div>
-                <div class="col-auto">
-                    <ul class="social-links">
+                <div class="col-md-auto col-12 text-center">
+                    <ul class="social-links ">
                         <li>
-                            <a href="#"><img src="images/general/facebook.svg"></a>
+                            <a href="# "><img src="images/general/facebook.svg "></a>
                         </li>
                         <li>
-                            <a href="#"><img src="images/general/tweeter.svg"></a>
+                            <a href="# "><img src="images/general/tweeter.svg "></a>
                         </li>
                         <li>
-                            <a href="#"><img src="images/general/linkedin.svg"></a>
+                            <a href="# "><img src="images/general/linkedin.svg "></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
+    <script src="js/jquery.min.js "></script>
+    <script src="js/popper.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
-    <script src="js/custom.js"></script>
+    <script src="js/custom.js "></script>
 </body>
