--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>useResearch</title>
 </head>
@@ -14,7 +17,7 @@
 <body>
     <!-- start header block -->
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light" data-aos="fade-in">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="images/general/logo.svg"> </a>
             <!--  <div>
@@ -55,18 +58,18 @@
             <div class="row align-items-center">
                 <div class="col-lg col-12">
                     <div class="inner-box">
-                        <h1 class="text-purple">The easiest way to win faster with <span class="text-brown">proof</span>!</h1>
-                        <p class="text-purple mb-5">
+                        <h1 class="text-purple" data-aos="fade-up" data-aos-delay="200">The easiest way to win faster with <span class="text-brown">proof</span>!</h1>
+                        <p class="text-purple mb-5" data-aos="fade-up" data-aos-delay="400">
                             UserResearch is a platform that help creators, Product managers, founders and researchers to test their product with their user criteria and get to see how they are interacting with it.
                         </p>
                         <div>
-                            <a href="#" class="btn btn-warning me-4">Get Started</a>
-                            <a href="#" class="text-purple spoof-font"><img src="images/home/play.svg" class="me-2">See how it works!</a>
+                            <a href="#" class="btn btn-warning me-4" data-aos="fade-up" data-aos-delay="600">Get Started</a>
+                            <a href="#" class="text-purple spoof-font" data-aos="fade-up" data-aos-delay="800"><img src="images/home/play.svg" class="me-2">See how it works!</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-auto col-12">
-                    <img src="images/home/hero-img.png" class="img-fluid">
+                    <img src="images/home/hero-img.png" class="img-fluid" data-aos="zoom-in" data-aos-delay="100">
                 </div>
             </div>
         </div>
@@ -75,16 +78,16 @@
     <!-- start section partners -->
     <section class="UR-partners text-center">
         <div class="container">
-            <h3 class="text-purple mb-5">Trusted by the leading companies of the future</h3>
+            <h3 class="text-purple mb-5" data-aos="fade-up" data-aos-delay="200">Trusted by the leading companies of the future</h3>
             <div class="row align-items-center">
-                <div class="col-sm-4 col-12 mb-sm-0 mb-5">
+                <div class="col-sm-4 col-12 mb-sm-0 mb-5" data-aos="zoom-in" data-aos-delay="400">
                     <img src="images/home/logo1.svg" class="img-fluid">
                     <span class="mt-2">*Investor partner and clinet</span>
                 </div>
-                <div class="col-sm-4 col-12 mb-sm-0 mb-5">
+                <div class="col-sm-4 col-12 mb-sm-0 mb-5" data-aos="zoom-in" data-aos-delay="600">
                     <img src="images/home/newlogo.svg" class="img-fluid">
                 </div>
-                <div class="col-sm-4 col-12">
+                <div class="col-sm-4 col-12" data-aos="zoom-in" data-aos-delay="800">
                     <img src="images/home/logo3.svg" class="img-fluid">
                 </div>
             </div>
@@ -92,7 +95,8 @@
     </section>
 
     <!-- start section why us -->
-    <section class="UR-features">
+    <section class="UR-features" data-aos="fade-in">
+        </div>
         <img src="images/home/img1.png" class="user-img">
         <div class="promotion-img"></div>
         <div class="absolute-block"></div>
@@ -100,43 +104,43 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-lg-auto col-md-6 col-12 left-side">
-                    <h2>Why you should use UserResearch</h2>
-                    <div class="types-img mb-3">
+                    <h2 data-aos="fade-up" data-aos-delay="200">Why you should use UserResearch</h2>
+                    <div class="types-img mb-3" data-aos="fade-up" data-aos-delay="400">
                         <img src="images/home/types.png">
                         <span class="spoof-font">For</span>
                     </div>
                     <div class="users-types">
-                        <span>Product Managers</span>
-                        <span>Product Designers</span>
-                        <span>Design Strategists</span>
-                        <span>Creators</span>
-                        <span>Startup Founders</span>
-                        <span>Universties Researchers</span>
+                        <span data-aos="fade-in" data-aos-delay="500">Product Managers</span>
+                        <span data-aos="fade-in" data-aos-delay="600">Product Designers</span>
+                        <span data-aos="fade-in" data-aos-delay="700">Design Strategists</span>
+                        <span data-aos="fade-in" data-aos-delay="800">Creators</span>
+                        <span data-aos="fade-in" data-aos-delay="900">Startup Founders</span>
+                        <span data-aos="fade-in" data-aos-delay="1000">Universties Researchers</span>
                     </div>
                 </div>
                 <div class="col-lg-auto col-md-6 col-12">
-                    <div class="feature-details mb-4">
+                    <div class="feature-details mb-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="feature-icon"><img src="images/home/validate-icon.svg"></div>
                         <div class="details">
                             <h4>Validate your product ideas and assess market demand</h4>
                             <p class="text-small">UserResearch is a platform that help creators, Product managers, founders.</p>
                         </div>
                     </div>
-                    <div class="feature-details mb-4">
+                    <div class="feature-details mb-4" data-aos="fade-up" data-aos-delay="400">
                         <div class="feature-icon"><img src="images/home/design-icon.svg"></div>
                         <div class="details">
                             <h4>Convince your stakeholders with your design decisions with a proof</h4>
                             <p class="text-small">UserResearch is a platform that help creators, Product managers</p>
                         </div>
                     </div>
-                    <div class="feature-details mb-4">
+                    <div class="feature-details mb-4" data-aos="fade-up" data-aos-delay="600">
                         <div class="feature-icon"><img src="images/home/dollar.svg"></div>
                         <div class="details">
                             <h4>Save time and money finding users to test with</h4>
                             <p class="text-small">UserResearch is a platform that help creators, Product managers, founders</p>
                         </div>
                     </div>
-                    <div class="feature-details mb-4">
+                    <div class="feature-details mb-4" data-aos="fade-up" data-aos-delay="800">
                         <div class="feature-icon"><img src="images/home/save.svg"></div>
                         <div class="details">
                             <h4>Fill the research gap in your design process</h4>
@@ -150,24 +154,24 @@
     <!-- start section how it works -->
     <section class="UR-works">
         <div class="container">
-            <h2 class="text-center text-white">How does <img src="images/home/beta.png"> beta version works?</h2>
+            <h2 class="text-center text-white" data-aos="fade-up" data-aos-delay="200">How does <img src="images/home/beta.png"> beta version works?</h2>
 
-            <div class="row work-steps">
-                <div class="col-md-4 col-12">
+            <div class=" work-steps" data-aos="fade-up" data-aos-delay="400">
+                <div>
                     <div class="step-box">
                         <div class="step-num spoof-font">1</div>
                         <h3>Sign up and create an account</h3>
                         <div>Send us a request as a client and fill up the form so we can create for you an account</div>
                     </div>
                 </div>
-                <div class="col-md-4 col-12">
+                <div>
                     <div class="step-box">
                         <div class="step-num spoof-font">2</div>
                         <h3>Provide us with your screener</h3>
                         <div>a customer support agent will be reaching out to collect from you the screener details</div>
                     </div>
                 </div>
-                <div class="col-md-4 col-12">
+                <div>
                     <div class="step-box">
                         <div class="step-num spoof-font">3</div>
                         <h3>Scheduling the interview</h3>
@@ -176,7 +180,7 @@
                 </div>
             </div>
 
-            <div class="contact-expert">
+            <div class="contact-expert" data-aos="fade-up" data-aos-delay="600">
                 <img src="images/home/cat.png">
                 <div class="text-white">
                     <h3>Do you need help?</h3>
@@ -190,9 +194,9 @@
     <!-- start section faq -->
     <section class="UR-faq">
         <div class="container">
-            <h2 class="text-center">FAQs</h2>
+            <h2 class="text-center" data-aos="fade-up" data-aos-delay="200">FAQs</h2>
             <div class="accordion" id="accordionExample">
-                <div class="accordion-item mb-4">
+                <div class="accordion-item mb-4" data-aos="fade-up" data-aos-delay="300">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             What kind of researches criteria that you support?
@@ -206,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item mb-4">
+                <div class="accordion-item mb-4" data-aos="fade-up" data-aos-delay="300">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             How expensive is UserResearch?
@@ -220,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item mb-4">
+                <div class="accordion-item mb-4" data-aos="fade-up" data-aos-delay="400">
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             How expensive is UserResearch?
@@ -234,7 +238,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item mb-4">
+                <div class="accordion-item mb-4" data-aos="fade-up" data-aos-delay="500">
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             How does the platform ensure user privacy and data security?
@@ -248,7 +252,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item mb-4">
+                <div class="accordion-item mb-4" data-aos="fade-up" data-aos-delay="600">
                     <h2 class="accordion-header" id="heading4">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                             How long do studies typically last?
@@ -262,7 +266,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item mb-4">
+                <div class="accordion-item mb-4" data-aos="fade-up" data-aos-delay="700">
                     <h2 class="accordion-header" id="heading5">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
                             How do companies benefit from using UserResearch?
@@ -276,7 +280,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item" data-aos="fade-up" data-aos-delay="800">
                     <h2 class="accordion-header" id="heading6">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
                             Do you offer Researchers to help me out with me research project?
@@ -295,16 +299,16 @@
     </section>
 
     <!--start section contact sales -->
-    <section class="UR-contact-sales">
+    <section class="UR-contact-sales" data-aos="fade-in">
         <div class="container text-white">
-            <h2 class="mb-3">Are you looking for research team?</h2>
-            <p class="text-small">We have a wide-network of top-tier researchers that can help you out with your project.</p>
-            <a href="#" class="btn btn-warning">Talk to sales</a>
+            <h2 class="mb-3" data-aos="fade-up" data-aos-delay="200">Are you looking for research team?</h2>
+            <p class="text-small" data-aos="fade-up" data-aos-delay="300">We have a wide-network of top-tier researchers that can help you out with your project.</p>
+            <a href="#" class="btn btn-warning" data-aos="fade-up" data-aos-delay="400">Talk to sales</a>
         </div>
     </section>
 
     <!-- start footer-->
-    <footer>
+    <footer data-aos="fade-in">
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class=" col-lg-auto col-12 ">
@@ -336,5 +340,8 @@
     </footer>
     <script src="js/jquery.min.js "></script>
     <script src="js/popper.min.js "></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/bootstrap.min.js "></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/custom.js "></script>
 </body>
